--- a/main-1.css
+++ b/main-1.css
@@ -1,1 +1,230 @@
+body, html {
+    width: 100%;
+    height: 100%;
+    font-family: 'Roboto Condensed';
+    margin: 0 auto;
+    text-align: center;
+}
 
+#food {
+    position: absolute;
+    color:  white;
+    margin-top: 180px;
+    margin-left: 3%;
+    margin-right: 0%;
+    top: 72.5%;
+    font-size: 55.5px;
+    background-color:  rgba(0,0,0,0.3);
+    padding: 0;
+}
+
+#page-container {
+    width: 100%;
+}
+
+
+header {
+    padding-top: 29%;
+    background-image: url(img/126894780_120905869658834_7913558852951796025_n.png);
+    background-size: cover;
+}
+
+h1 {
+    margin: 0;
+    font-size: 6vw;
+}
+
+.flex-symbols {
+    margin-top: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: rgba(135,163,150,0.5);
+}
+
+.heart {
+    width: 10%;
+    height: 65%;
+    padding-bottom: 0%;
+    padding-top: 2%;
+    
+}
+
+.bag {
+    width: 10%;
+    padding-bottom: 3%;
+    margin-top: 1%;
+    
+}
+
+.more {
+    width: 9%;
+}
+
+
+.flex-symbols input {
+    height: 35%;
+    width: 25%;
+    padding: 1.5%;
+    margin-top: 3.5%;
+    background-color: white;
+    border: rgba(135,163,150,0.5) 1px solid;
+   
+}
+
+.menues {
+    display: flex;
+    margin-left: 5%;
+    margin-bottom: 5%;
+}
+
+
+#category input {
+    width: 85%;
+    border: none;
+    background-color: rgba(135,163,150,0.5);
+    padding: 5%;
+    
+}
+
+#price input {
+    width: 70%;
+    background-color: rgba(135,163,150,0.5);
+    border: none;
+    padding: 5%;
+    margin-left: 8%;
+}
+
+#location input {
+    width: 75%;
+    background-color: rgba(135,163,150,0.5);
+    border: none;
+    padding: 5%;
+}
+
+ol {
+    
+    width: 100%;
+    flex-direction: row;
+    background-color: #F5F5F6;
+    padding: 0 0% 3% 8%;
+    margin: 0;
+
+}
+
+
+li {
+    display: inline; /*delete the numbers/dots*/ 
+    padding-right: 8%;
+
+    
+}
+a { /*nav menu list and footer list links*/
+    color: #3e536d;
+    text-decoration: none;
+}
+
+.menues {
+    display: flex;
+    flex: wrap;
+    justify-content: space-around;
+}
+
+#category-select {
+    background-color: #fff;
+    border: none;
+}
+
+
+
+.main-text {
+    color: black;
+    padding-bottom: 5%;
+    padding-top: 3%;
+    margin-bottom: 3%;
+    margin-top: 3%;
+    width: 100%;
+}
+
+.main-head {
+    color: black;
+    font-weight: 100;
+    font-size: 150%;
+    padding-left: 3%;
+}
+
+.main-info {
+    color: black;
+}
+
+p {
+    color: #3c3c3b;
+    font-size: 5vw;
+    font-weight: 300;
+    line-height: 160%;
+    padding-left: 3%;
+}
+
+
+img {
+    width: 93%; /*not 100% because then image goes outside the border*/
+    height: 100%;
+    margin: 3%;
+    
+
+}
+
+h3 {
+    color: #3c3c3b;
+    font-size: 7vw;
+    font-weight: 500;
+    padding-left: 3%;
+    margin-top: 0;
+    text-transform: uppercase;
+}
+
+.flex-item {
+    background-color: rgba(135,163,150,0.5);
+    padding: 0;
+    width: 100%;
+    margin-bottom: 3%;
+    padding-bottom: 10%;
+
+}
+
+.read {
+    color: rgba(135,163,150,0.5);
+    background-color: #eee;
+    border: #fff 0.5vw solid;
+    
+    width: 70%;
+}
+
+h4 {
+    color: white;
+    text-align: center;
+}
+
+.bottom-container {
+    background-color: rgb(135,163,150);
+    width: 100%;  
+    padding-top: 3%;
+    display: flex;
+    flex-direction: column;
+}
+
+.bottom-container p {
+    font-size: 85%;
+    text-align: center;
+   
+}
+
+footer {
+    background-color: rgb(135,163,150);
+    width: 100%;
+    margin-top: 3%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-size: 60%;
+    text-align: center;
+}
